// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/RadioMenuItem when rendered with isSelected=false it should match snapshot 1`] = `
<Selectable
  onClick={[MockFunction]}
  style={Object {}}
>
  <div>
    <ToggleButton
      isSelected={false}
      onClick={[MockFunction]}
      style={
        Object {
          "borderRadius": 7,
          "display": "inline-block",
          "height": 15,
          "marginRight": 10,
          "width": 15,
        }
      }
    />
    This is a radio menu item
  </div>
</Selectable>
`;

exports[`components/RadioMenuItem when rendered with isSelected=true it should match snapshot 1`] = `
<Selectable
  onClick={[MockFunction]}
  style={Object {}}
>
  <div>
    <ToggleButton
      isSelected={true}
      onClick={[MockFunction]}
      style={
        Object {
          "borderRadius": 7,
          "display": "inline-block",
          "height": 15,
          "marginRight": 10,
          "width": 15,
        }
      }
    />
    This is a radio menu item
  </div>
</Selectable>
`;
